# DoomNoKern

./: .gitignore  .gitmodules  README.md  compile-libarchive.sh  compile-newlib.sh  limine.conf
ff16/source/: compile.sh
kernel/: Makefile  Makefile.in  boot.S  boot32.S  compile.sh  config.status  configure  configure.ac  cpio.c  cpio.h  fat12.img  idt.c  input.c  input.h  irq_stubs.S  kern.c  kern.c.old  kernel.c  kernel.elf  limine.cfg  linker32.ld  linker32.ld.old  pit.c  pit.h  ramdisk.c  ramdisk.cpio  run.sh  stubs.c  stubs.h  stubs_old.c  vga13.c  vga13.h
kernel/fat_folder/: README.TXT
kernel/fat_folder/.fseventsd/: fseventsd-uuid
kernel/include/arch/x86/: faults.h  idt.h  io.h
kernel/include/drivers/: cpio.h  keyboard.h  pit.h  video_text.h  video_vga13.h
kernel/include/kernel/: console.h  stdin.h  system.h
kernel/include/newlib/: newlib.h
kernel/src/: main.c  main.c.old  tinylisp.c
kernel/src/arch/: boot.S.no  boot.S.old  faults.S  idt.c  irq_stubs.S  mb1_start.S
kernel/src/drivers/: cpio.c  fat12_img.c  keyboard.c  pit.c  video_text.c  video_vga13.c
kernel/src/kernel/: console.c  faults.c  kernel.c  stdin.c  stubs.c
kernel/test_kbd/: boot_kbd.S  kbd.elf  linker.ld
scripts/: compile-fatfs.sh  compile-newlib.sh  create_disk.sh  full-rebuild.sh  load_disk.sh  show.sh
sysroot/i686-elf/lib/: libarchive.la
sysroot/i686-elf/lib/pkgconfig/: libarchive.pc
sysroot/lib/: libarchive.13.dylib
